# NSightful

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  index.html  main-simple.js  main.js  package-lock.json  package.json  styles.css  tauri.conf.json  vite.config.js
js/analyzers/: PerformanceAnalyzer.js
js/controllers/: AppController.js
js/models/: GPUDataModel.js
js/parsers/: NSightReportParser.js
js/utils/: ChartManager.js  NavigationManager.js  TestDataLoader.js
js/views/: DetailedGPUVisualization.js  Enhanced3DGPUVisualization.js  GPUVisualizationView.js  IndustrialGPUVisualization.js
src/: main.rs  nvml.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: nvml.rs
test-data/: nsight-reports.json
